apps/social-media-reuploader/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: social-media-reuploader-gui
  namespace: social-media-reuploader
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "social-media-reuploader.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # Verify that the backend service name below matches the service created by the Helm chart.
      # Common possibilities: "social-media-reuploader" or "social-media-reuploader-gui".
      backendRefs:
        - name: social-media-reuploader
          port: 80
